@@ -18,6 +18,10 @@ like( $result->error, qr{doesn't exist}, 'infile not exists' );
 $result = test_app( 'App::Fasops' => [qw(split t/example.fas -o stdout)] );
 is( ( scalar grep {/\S/} split( /\n/, $result->stdout ) ), 24, 'line count' );
 
+$result = test_app( 'App::Fasops' => [qw(split t/example.fas -o stdout --simple)] );
+like( $result->stdout, qr{^>S288c$}m, 'simple headers' );
+unlike( $result->stdout, qr{I\(\+\)}, 'no positions' );
+
 my Path::Tiny $tempdir = Path::Tiny::tempdir();
 $result = test_app( 'App::Fasops' => [ qw(split t/example.fas --chr -o ), $tempdir->stringify ] );
 is($result->stdout, "" );
